@startuml Pet Adoption Store

scale 1.5

skinparam titleBorderRoundCorner 10
skinparam titleBorderThickness 1
skinparam titleBorderColor black
' skinparam titleBackgroundColor yellow

title 
Pet Adoption Store 
end title

class Species{
   #speciesID;
   -speciesName;

   +__construct()
   +getSpeciesID()
   +getSpeciesName()
}

class Breed extends Species{
   #breedID;
   -breedName;
   #speciesID;

   +__construct()
   +getBreedID()
   +getBreedName()
   +getSpeciesID()
}

class Gender{
   #genderID;
   -genderName;
}

class Age{
   #ageID;
   -ageName;
}

class Color{
   #colorID;
   -colorName;
}

class CoatLength{
   #coatLengthID;
   -coatLengthName;
}

class Vaccines{
   #vaccinesID;
   -vaccinesName;
}

class Neutered{
   #neuteredID;
   -neuteredName;
}

class Pet extends Breed{
   #petID;
   -petName;
   #speciesID;
   #breedID;
   #genderID;
   #ageID;
   #colorID;
   #coatLengthID;
   #vaccinesID;
   #neuteredID;
   #toySpeciesID;
   -petDescription;
   -petFee;

   +__construct()
   +getPetID()
   +getPetName()
   +getSpeciesID()
   +getBreedID()
   +getGenderID()
   +getAgeID()
   +getColorID()
   +getCoatLengthID()
   +getVaccinesID()
   +getNeuteredID()
   +getToySpeciesID()
   +getPetDescription()
   +getPetFee()
}

class Toys_Species{
   #toySpeciesID;
   -toySpeciesName;
}

class Toys extends Toys_Species{
   #toyID;
   -toyName;
   -toyQty;
   -toyDescription;
   -toySpeciesID
   -toyPrice;

   +__construct()
   +getToyID()
   +getToyName()
   +getToyQty()
   +getToyDescription()
   +getToySpeciesID()
   +getToyPrice()
}

Pet --> Toys_Species : toySpeciesID
Gender o-- Pet : trait, maybe?
Age o-- Pet : trait, maybe?
Color o-- Pet : trait, maybe?
CoatLength o-- Pet : trait, maybe?
Vaccines o-- Pet : trait, maybe?
Neutered o-- Pet : trait, maybe?

@enduml